<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_dapur"
        android:icon="@drawable/chef_hat"
        android:title="@string/dapur_pintar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/ic_scan"
        android:title="@string/AI"
        app:showAsAction="always" />
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/paper"
        android:title="@string/history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_option"
        android:icon="@drawable/ic_option"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>
